welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: identifier expected but 'false' found.
	var vuBiscuit():Boolean == false
                                   ^